# PurePythia

./: CMakeLists.txt  README.md
config/: full_jet_event_isroff.xml  full_jet_event_mpioff.xml  full_jet_event_mpioff_isroff.xml  promptphoton.xml  promptphotonA14.xml  test.xml
external_packages/: CMakeLists.txt
scripts/: job_submission.py  pthatbins.yaml
src/: CMakeLists.txt  RunPythia.cc  RunPythia.h  SetFile.cc  SetFile.h  SetXML.cc  SetXML.h  main.cc
